# structured-extraction-pipeline

./: .env.example  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
infrastructure/: Dockerfile  docker-compose.yml
infrastructure/terraform/: main.tf
src/: main.py
src/api/: app.py  dependencies.py  middleware.py
src/api/routes/: __init__.py  extraction.py  graph.py  health.py  ingestion.py  search.py
src/core/: config.py  exceptions.py  logging.py
src/db/: session.py
src/db/migrations/: env.py
src/db/migrations/versions/: 94e7db9b206e_create_initial_tables.py
src/db/repositories/: __init__.py  citation_repo.py  extraction_repo.py  job_repo.py  opinion_repo.py
src/models/: database.py  domain.py  requests.py  responses.py
src/services/extraction/: extractor.py  llm_client.py  prompts.py  validators.py
src/services/graph/: authority_analyzer.py  citation_resolver.py  conflict_detector.py
src/services/ingestion/: bulk_loader.py  chunker.py  courtlistener.py  parser.py
src/services/queue/: worker.py
src/services/search/: embeddings.py  vector_search.py
src/utils/: citation_parser.py  text_cleaning.py
tests/: conftest.py
tests/integration/: test_extraction_api.py  test_graph_api.py  test_ingestion_api.py  test_search_api.py
tests/unit/: test_chunker.py  test_citation_parser.py  test_citation_resolver.py  test_conflict_detector.py  test_models.py  test_prompts.py  test_repositories.py  test_validators.py  test_vector_search.py
